--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
                     <p class="add-sec">India</p>
                 </div>
             </div>
+
+            <div class="nav-search">
+                <select>
+                    <option>All</option>
+                </select>
+                <input placeholder="Search Amazon">
+                <div class="serach-icon"></div>
+            </div>
         </div>
     </header>
     
