--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
             </div>
 
             <div class="nav-search">
-                <select>
+                <select class="search-select">
                     <option>All</option>
                 </select>
-                <input placeholder="Search Amazon">
-                <div class="serach-icon"></div>
+                <input placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
             </div>
+        </div>
+        <div class="nav-signin border">
+            <p><span>Hello, Sign in</span></p>
+            <p class="nav-second">Account & Lists</p>
+        </div>
+
+        <div class="nav-return border">
+            <p><span>Returns</span></p>
+            <p class="nav-second">& Orders</p>
         </div>
     </header>
     
