Add Cart in NavBar

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
-        </div>
-        <div class="nav-signin border">
+
+             <div class="nav-signin border">
             <p><span>Hello, Sign in</span></p>
             <p class="nav-second">Account & Lists</p>
         </div>
@@ -39,6 +39,13 @@
         <div class="nav-return border">
             <p><span>Returns</span></p>
             <p class="nav-second">& Orders</p>
+        </div>
+
+        <div class="nav-cart">
+           <i class="fa-solid fa-cart-shopping"></i> 
+           Cart
+        </div>
+
         </div>
     </header>
     
