--- a/index.html
+++ b/index.html
@@ -41,11 +41,28 @@
             <p class="nav-second">& Orders</p>
         </div>
 
-        <div class="nav-cart">
+        <div class="nav-cart border">
            <i class="fa-solid fa-cart-shopping"></i> 
            Cart
         </div>
+        </div>
+        <div class="panel">
+           <div class="panel-all">
+            <i class="fa-solid fa-bars"></i>
+            All
+           </div>
+           <div class="panel-ops">
+            <p>Today's Deals</p>
+            <p>Registry</p>
+            <p>Prime Video</p>
+            <p>Gift Cards</p>
+            <p>Customer Service</p>
+            <p>Sell</p>
+           </div>
 
+           <div class="panel-deals">
+            Shop deals in Electronics
+           </div>
         </div>
     </header>
     
