--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
     <div class="hero-section">
         <div class="hero-message">
-            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a></a>Click here to go to amazon.in</a></p>
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
         </div>
     </div>
 </body>
