--- a/index.html
+++ b/index.html
@@ -70,5 +70,11 @@
             <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
         </div>
     </div>
+    <div class="shop-section">
+        <div class="box1">box1</div>
+        <div class="box2">box2</div>
+        <div class="box3">box3</div>
+        <div class="box4">box4</div>
+    </div>
 </body>
 </html>
