--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
     </div>
     <div class="shop-section">
         <div class="box1 box">
-            <h2>Health & Personal Care</h2>
-            <div class="box-img"></div>
-            <p>See more</p>
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image : url('box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
         </div>
         <div class="box2 box">box2</div>
         <div class="box3 box">box3</div>
