--- a/index.html
+++ b/index.html
@@ -78,9 +78,27 @@
                 <p>See more</p>
             </div>
         </div>
-        <div class="box2 box">box2</div>
-        <div class="box3 box">box3</div>
-        <div class="box4 box">box4</div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image : url('box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image : url('box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image : url('box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
