--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="foot-panel1">
+            Back to Top
+        </div>
+    </footer>
     
 </body>
 </html>
