--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
                 <a>Help</a>
             </ul>
         </div>
+
+        <div class="foot-panel3">
+            <div class="logo"></div>
+        </div>
     </footer>
     
 </body>
