--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                <a>Consumer Health Data Privacy Disclosure</a>
                <a>Your Ads Privacy Choices</a>
             </div>
+            <div class="copyright">
+                © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
         </div>
     </footer>
     
